[gd_scene load_steps=47 format=3 uid="uid://brjar3rrxlwq2"]

[ext_resource type="Texture2D" uid="uid://dk0ag3qfe2so1" path="res://assets/sprites/background_menu.jpg" id="1_o5qli"]
[ext_resource type="Script" uid="uid://rtdu8463qa3u" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://blopy0xuivig2" path="res://scenes/dot.tscn" id="3_jyhfs"]
[ext_resource type="PackedScene" uid="uid://vo8r4sc5nopn" path="res://scenes/player.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://cot7dab0hmhbo" path="res://scenes/power_dot.tscn" id="4_tbgi4"]
[ext_resource type="PackedScene" uid="uid://cvc11wosumlu4" path="res://scenes/enemy.tscn" id="5_choun"]
[ext_resource type="AudioStream" uid="uid://k074hpb0haek" path="res://assets/audio/pickup.wav" id="6_85g3d"]
[ext_resource type="AudioStream" uid="uid://dafrbipiq7mjw" path="res://assets/audio/death.wav" id="9_eb6dy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sugp2"]
size = Vector2(225, 111)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyhfs"]
size = Vector2(227, 111)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbgi4"]
size = Vector2(337, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tefeu"]
size = Vector2(374, 171)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6xl0"]
size = Vector2(141, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tipki"]
size = Vector2(1925, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85g3d"]
size = Vector2(62, 214)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_choun"]
size = Vector2(46, 1028)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya4ey"]
size = Vector2(1875.5, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eb6dy"]
size = Vector2(378, 169)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trceg"]
size = Vector2(45, 979)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8y0u"]
size = Vector2(212, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkv2x"]
size = Vector2(226.5, 97)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbj1t"]
size = Vector2(164.5, 168)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muem4"]
size = Vector2(167.5, 169.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dp3eg"]
size = Vector2(226, 98)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ld40"]
size = Vector2(213, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqmmt"]
size = Vector2(227, 104)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yc10j"]
size = Vector2(210.5, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jscy8"]
size = Vector2(227, 104)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pm3ni"]
size = Vector2(226, 103)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y6deb"]
size = Vector2(226.5, 103)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_og1vs"]
size = Vector2(61.5, 211)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wyq8"]
size = Vector2(337.5, 61.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxglm"]
size = Vector2(61, 205)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2f3dj"]
size = Vector2(142, 60.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yq6so"]
size = Vector2(62, 204)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fv21b"]
size = Vector2(229, 99)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tel4y"]
size = Vector2(214, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qkpxi"]
size = Vector2(229.5, 109)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5q0nq"]
size = Vector2(143.5, 60.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgi5k"]
size = Vector2(222.5, 109.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8jky"]
size = Vector2(223, 99)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmb1v"]
size = Vector2(229, 102.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fuf3a"]
size = Vector2(144, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pibwh"]
size = Vector2(223.5, 104)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6pm6"]
size = Vector2(228.5, 104)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5he1u"]
size = Vector2(224, 103.5)

[node name="Main" type="Node2D"]
script = ExtResource("1_sugp2")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_o5qli")

[node name="Background2" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_o5qli")

[node name="Walls" type="Node2D" parent="."]

[node name="Wall1" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall1"]
position = Vector2(224.5, 172.5)
shape = SubResource("RectangleShape2D_sugp2")

[node name="Wall2" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall2"]
position = Vector2(516.5, 172.5)
shape = SubResource("RectangleShape2D_jyhfs")

[node name="Wall3" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall3"]
position = Vector2(959.5, 361)
shape = SubResource("RectangleShape2D_tbgi4")

[node name="Wall4" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall4"]
position = Vector2(513, 540.5)
shape = SubResource("RectangleShape2D_tefeu")

[node name="Wall5" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall5"]
position = Vector2(794.5, 149)
shape = SubResource("RectangleShape2D_o6xl0")

[node name="Wall6" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall6"]
position = Vector2(960.5, 25.5)
shape = SubResource("RectangleShape2D_tipki")

[node name="Wall7" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall7"]
position = Vector2(896, 157)
shape = SubResource("RectangleShape2D_85g3d")

[node name="Wall8" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall8"]
position = Vector2(23, 564)
shape = SubResource("RectangleShape2D_choun")

[node name="Wall9" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall9"]
position = Vector2(982.25, 1052)
shape = SubResource("RectangleShape2D_ya4ey")

[node name="Wall10" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall10"]
position = Vector2(1407, 542.5)
shape = SubResource("RectangleShape2D_eb6dy")

[node name="Wall11" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall11"]
position = Vector2(1897.5, 543.5)
shape = SubResource("RectangleShape2D_trceg")

[node name="Wall12" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall12"]
position = Vector2(1769, 605.5)
shape = SubResource("RectangleShape2D_a8y0u")

[node name="Wall13" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall13"]
position = Vector2(224.75, 341.5)
shape = SubResource("RectangleShape2D_jkv2x")

[node name="Wall14" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall14"]
position = Vector2(853.75, 541)
shape = SubResource("RectangleShape2D_jbj1t")

[node name="Wall15" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall15"]
position = Vector2(1066.25, 540.25)
shape = SubResource("RectangleShape2D_muem4")

[node name="Wall16" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall16"]
position = Vector2(516, 341)
shape = SubResource("RectangleShape2D_dp3eg")

[node name="Wall17" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall17"]
position = Vector2(152.5, 605)
shape = SubResource("RectangleShape2D_0ld40")

[node name="Wall18" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall18"]
position = Vector2(516.5, 745)
shape = SubResource("RectangleShape2D_gqmmt")

[node name="Wall19" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall19"]
position = Vector2(150.75, 475)
shape = SubResource("RectangleShape2D_yc10j")

[node name="Wall20" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall20"]
position = Vector2(224.5, 745)
shape = SubResource("RectangleShape2D_jscy8")

[node name="Wall21" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall21"]
position = Vector2(225, 913.5)
shape = SubResource("RectangleShape2D_pm3ni")

[node name="Wall22" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall22"]
position = Vector2(516.75, 913.5)
shape = SubResource("RectangleShape2D_y6deb")

[node name="Wall23" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall23"]
position = Vector2(1025.25, 157.5)
shape = SubResource("RectangleShape2D_og1vs")

[node name="Wall24" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall24"]
position = Vector2(960.25, 723.625)
shape = SubResource("RectangleShape2D_2wyq8")

[node name="Wall25" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall25"]
position = Vector2(895.5, 924.5)
shape = SubResource("RectangleShape2D_vxglm")

[node name="Wall26" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall26"]
position = Vector2(794, 929.75)
shape = SubResource("RectangleShape2D_2f3dj")

[node name="Wall27" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall27"]
position = Vector2(1025, 923)
shape = SubResource("RectangleShape2D_yq6so")

[node name="Wall28" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall28"]
position = Vector2(1405.5, 342.5)
shape = SubResource("RectangleShape2D_fv21b")

[node name="Wall29" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall29"]
position = Vector2(1767, 476)
shape = SubResource("RectangleShape2D_tel4y")

[node name="Wall30" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall30"]
position = Vector2(1406.25, 173.5)
shape = SubResource("RectangleShape2D_qkpxi")

[node name="Wall31" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall31"]
position = Vector2(1128.25, 149.75)
shape = SubResource("RectangleShape2D_5q0nq")

[node name="Wall32" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall32"]
position = Vector2(1696.75, 173.25)
shape = SubResource("RectangleShape2D_dgi5k")

[node name="Wall33" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall33"]
position = Vector2(1696.5, 342.5)
shape = SubResource("RectangleShape2D_j8jky")

[node name="Wall34" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall34"]
position = Vector2(1405.5, 744.75)
shape = SubResource("RectangleShape2D_kmb1v")

[node name="Wall35" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall35"]
position = Vector2(1128, 929.5)
shape = SubResource("RectangleShape2D_fuf3a")

[node name="Wall36" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall36"]
position = Vector2(1697.25, 745)
shape = SubResource("RectangleShape2D_pibwh")

[node name="Wall37" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall37"]
position = Vector2(1405.75, 914)
shape = SubResource("RectangleShape2D_c6pm6")

[node name="Wall38" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall38"]
position = Vector2(1697, 914.25)
shape = SubResource("RectangleShape2D_5he1u")

[node name="Items" type="Node2D" parent="."]

[node name="lixo" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1184, 486)

[node name="lixo18" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1244, 149)

[node name="lixo19" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1242, 217)

[node name="lixo2" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1244, 86)

[node name="lixo3" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1840, 105)

[node name="lixo4" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1839, 181)

[node name="lixo5" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1162, 82)

[node name="lixo6" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1841, 339)

[node name="lixo7" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1823, 419)

[node name="lixo8" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1716, 420)

[node name="lixo9" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1626, 432)

[node name="lixo10" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1543, 433)

[node name="lixo11" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1462, 430)

[node name="lixo12" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1093, 290)

[node name="lixo20" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1024, 293)

[node name="lixo21" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(960, 211)

[node name="lixo23" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(959, 143)

[node name="lixo22" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(959, 78)

[node name="lixo13" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1094, 218)

[node name="lixo14" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1182, 655)

[node name="lixo15" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1185, 556)

[node name="lixo16" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1165, 217)

[node name="lixo24" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1163, 293)

[node name="lixo25" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1172, 360)

[node name="lixo26" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1184, 424)

[node name="lixo27" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1247, 424)

[node name="lixo28" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1306, 426)

[node name="lixo29" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(1374, 427)

[node name="lixo17" parent="Items" instance=ExtResource("3_jyhfs")]
position = Vector2(658, 422)

[node name="power lixo" parent="Items" instance=ExtResource("4_tbgi4")]
position = Vector2(959, 285)

[node name="power lixo5" parent="Items" instance=ExtResource("4_tbgi4")]
position = Vector2(1246, 992)

[node name="power lixo6" parent="Items" instance=ExtResource("4_tbgi4")]
position = Vector2(1634, 602)

[node name="power lixo7" parent="Items" instance=ExtResource("4_tbgi4")]
position = Vector2(1552, 250)

[node name="power lixo8" parent="Items" instance=ExtResource("4_tbgi4")]
position = Vector2(1097, 84)

[node name="power lixo4" parent="Items" instance=ExtResource("4_tbgi4")]
position = Vector2(712, 729)

[node name="power lixo3" parent="Items" instance=ExtResource("4_tbgi4")]
position = Vector2(368, 92)

[node name="power lixo2" parent="Items" instance=ExtResource("4_tbgi4")]
position = Vector2(714, 422)

[node name="power lixo9" parent="Items" instance=ExtResource("4_tbgi4")]
position = Vector2(289, 544)

[node name="Enemies" type="Node2D" parent="."]
position = Vector2(570, 507)

[node name="enemy" parent="Enemies" instance=ExtResource("5_choun")]
position = Vector2(-24, -83)

[node name="enemy2" parent="Enemies" instance=ExtResource("5_choun")]
position = Vector2(677, 410)

[node name="enemy3" parent="Enemies" instance=ExtResource("5_choun")]
position = Vector2(130, 311)

[node name="enemy4" parent="Enemies" instance=ExtResource("5_choun")]
position = Vector2(-202, -246)

[node name="enemy5" parent="Enemies" instance=ExtResource("5_choun")]
position = Vector2(124, -245)

[node name="Player" parent="." instance=ExtResource("3_sugp2")]
position = Vector2(959, 542)
script = null

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 4.0
offset_right = 48.0
offset_bottom = 27.0
text = "score"

[node name="TimeLabel" type="Label" parent="CanvasLayer"]
offset_left = 1803.0
offset_top = 15.0
offset_right = 1843.0
offset_bottom = 38.0
text = "timer:"

[node name="PowerLabel" type="Label" parent="CanvasLayer"]
offset_left = 866.0
offset_top = 9.0
offset_right = 1262.0
offset_bottom = 37.0
text = "ESPECIAL:"

[node name="PickupSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_85g3d")
autoplay = true

[node name="DeathSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_eb6dy")

[node name="PowerTimer" type="Timer" parent="."]

[node name="GameTimer" type="Timer" parent="."]
autostart = true
